# seismic-waveform-factory

./: .flake8  .pre-commit-config.yaml  .readthedocs.yml  README.md  axitra_routines.py  compute_multi_cmt.py  extract_fault_boundary.py  generate_figure_synthetics.py  get_focal_mechanism_multi_cmt.py  instaseis_routines.py  plot_map_cmt.py  plot_station_map.py  plot_stf_cmt.py  plot_teleseismic_station_map.py  pyproject.toml  pyprop8_routines.py  requirements.txt  retrieve_waveforms.py  scalebar.py  select_stations.py  select_stations_azimuthal.py  source_parameters_2_moment_tensor.py  velocity_model_axitra.txt  waveform_figure_generator.py
config_example/: axitra_config.ini  axitra_velocity_model.txt  config_Palu.ini  config_Sandwich.ini  config_aqaba.ini  waveforms_config_regional_sources.yaml  waveforms_config_teleseismic_sources.yaml
docs/: Makefile  conf.py  index.rst  quickstart.rst
hinet_data_related/: README.md  cnt_to_miniseed.py  get_waveform_event_bosai.py
scripts/: axitra_routines.py  cmt.py  compute_multi_cmt.py  config_loader.py  config_schema.py  config_utils.py  copy_selected_sac_data_to_folder.py  fault_processing.py  faultoutput.py  generate_figure_synthetics.py  generate_legend_box.py  generate_map_with_waveforms.py  generate_seissol_station_file.py  geodetic_utils.py  get_focal_mechanism_multi_cmt.py  instaseis_routines.py  modify_wasp_strong_motion_waves.py  plot_map_cmt.py  plot_station_map.py  plot_stf_cmt.py  prepare_for_linslip.py  pyprop8_routines.py  retrieve_waveforms.py  seissol_receiver_processing.py  select_stations.py  (+3 more)
(+61 files in other folders)
